<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iSport</string>

    <!-- MainActivity -->
    <string name="main_activity_tab_name1">step</string>
    <string name="main_activity_tab_name2">statistics</string>
    <string name="main_activity_tab_name3">map</string>
    <string name="main_activity_tab_name4">location</string>
    <string name="main_activity_tab_name5">search</string>

    <!-- register -->
    <string name="register_xml_page_title">User register</string>
    <string name="register_xml_nickname">ID:</string>
    <string name="register_xml_sex">gender:</string>
    <string name="register_xml_weight">weight:</string>
    <string name="register_xml_weight_hint">enter an integer</string>
    <string name="register_xml_pace_length">starting pace:</string>
    <string name="register_xml_sensibility">Sensitivity:</string>
    <string name="register_xml_plan">daily plan</string>
    <string name="register_xml_plan_hint">recommend 6000 steps</string>
    <string name="register_xml_bt_save">save information</string>
    <string name="register_xml_bt_reset">re-register</string>

    <string name="register_activity_unit_pace_length">cm</string>
    <string name="register_activity_unit_weight">kg</string>
    <string name="register_activity_unit_steps">step</string>
    <string name="register_activity_recommand">(recommend)</string>

    <string name="register_activity_toast_success">The information is set up and start to move!</string>
    <string name="register_activity_toast_valid_nickname">ID is required!</string>
    <string name="register_activity_toast_valid_weight_null">weight is required!</string>
    <string name="register_activity_toast_valid_weight_fail">weight is invalid, please try again!</string>
    <string name="register_activity_toast_valid_pace_lenght_null">step is required!</string>
    <string name="register_activity_toast_valid_pace_lenght_fail">step is invalid, please try again!</string>
    <string name="register_activity_toast_valid_plan_null">planning step is required!</string>
    <string name="register_activity_toast_valid_plan_fail">planning step is invalid, please try again!</string>


    <!-- Tab1相关 -->
    <string name="tab1_xml_page_title1">user detail</string>
    <string name="tab1_xml_grade">level:</string>
    <string name="tab1_xml_title">title:</string>

    <string name="tab1_xml_page_title2">movement record</string>
    <string name="tab1_xml_steps">steps:</string>
    <string name="tab1_xml_distance">distance:</string>
    <string name="tab1_xml_calories">calories:</string>
    <string name="tab1_xml_duration">duration:</string>
    <string name="tab1_xml_pace_length">avg pace:</string>

    <string name="tab1_xml_page_title3">movement</string>
    <string name="tab1_xml_bt_normal">normal step</string>
    <string name="tab1_xml_bt_special">step with map</string>

    <string name="tab1_activity_unit_distance">km</string>
    <string name="tab1_activity_unit_steps">step</string>
    <string name="tab1_activity_unit_calories"> calories</string>
    <string name="tab1_activity_unit_hour"> hour </string>
    <string name="tab1_activity_unit_minute"> minute </string>
    <string name="tab1_activity_unit_second"> second</string>
    <string name="tab1_activity_unit_pace_length"> cm</string>

    <!-- Tab2相关 -->





    <!-- Tab3相关 -->
    <string name="tab3_fragment_tab1_name">real-time tracking</string>
    <string name="tab3_fragment_tab2_name">destination navigation</string>

    <string name="tab3_fragment1_xml_bt_start_navigation">start tracking</string>
    <string name="tab3_fragment1_xml_bt_stop_navigation">stop tracking</string>

    <string name="tab3_fragment2_xml_tv_title">任意位置到目的地导航：</string>
    <string name="tab3_fragment2_xml_et_begin_address">start address, postcode or geo coordinates</string>
    <string name="tab3_fragment2_xml_et_end_address">destination address, postcode or geo coordinates</string>
    <string name="tab3_fragment2_xml_bt_commit">OK</string>

    <!-- Tab4相关 -->
    <string name="tab4_xml_title">user profile</string>
    <string name="tab4_xml_title_hint">enter your ID</string>
    <string name="tab4_xml_alarm">alarm: </string>
    <string name="tab4_xml_alarm_type">remind type</string>
    <string name="tab4_xml_bt_save">save</string>
    <string name="tab4_xml_bt_reset">reset</string>
    <string name="tab4_xml_bt_clear_all">clear all</string>

    <string name="tab4_fragment_toast_open_alarm">open</string>
    <string name="tab4_fragment_toast_close_alarm">close</string>

    <string name="tab4_fragment_dialog_title">warning</string>
    <string name="tab4_fragment_dialog_msg">give up level and title, and delete history record?</string>
    <string name="tab4_fragment_dialog_bt1">OK</string>
    <string name="tab4_fragment_dialog_bt2">cancel</string>
    <string name="tab4_fragment_toast_clear_all">data clear!</string>
    <string name="tab4_fragment_toast_alarm_msg">今天该运动了！</string>
    <string name="tab4_fragment_toast_alarm_setting_yes">alarm set</string>
    <string name="tab4_fragment_toast_alarm_setting_no">alarm discard</string>
    <string name="tab4_fragment_toast_setting_yes">setting is done</string>


    <!-- Tab5相关 -->
    <string name="tab5_fragment_tab1_name">record query</string>
    <string name="tab5_fragment_tab2_name">achievement query</string>

    <string name="tab5_fragment_one_bt_action">history query(networking needed)</string>
    <string name="tab5_fragment_one_listview_bt_del">delete</string>
    <string name="tab5_fragment_one_adapter_tv_taskno">number</string>


    <!-- Tab1相关 -->





    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
</resources>