<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tab3_fragment2_xml_tv_title"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <AutoCompleteTextView
            android:id="@+id/et_tab3_two_search2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/tab3_fragment2_xml_et_begin_address"
            android:maxLines="1"/>

        <AutoCompleteTextView
            android:id="@+id/et_tab3_two_search3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/tab3_fragment2_xml_et_end_address"
            android:maxLines="1"/>

        <Button
            android:id="@+id/bt_tab3_two_go2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_corner"
            android:text="@string/tab3_fragment2_xml_bt_commit"/>
    </LinearLayout>

</LinearLayout>
